fixed raw dataset location

--- a/notebooks/raw_data_plotting.ipynb
+++ b/notebooks/raw_data_plotting.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Load the dataset into a pandas DataFrame\n",
     "\n",
-    "DATASET_PATH=os.path.join(os.path.dirname(os.getcwd()), 'results.csv')\n",
+    "DATASET_PATH=os.path.join(os.path.dirname(os.getcwd()), 'data', 'agg.csv')\n",
     "print('Loading dataset from \"{}\".'.format(DATASET_PATH))\n",
     "df = pd.DataFrame.from_csv(DATASET_PATH)\n",
     "print('Done.')\n",
