addapted notebook to use source modules

--- a/notebooks/raw_data_plotting.ipynb
+++ b/notebooks/raw_data_plotting.ipynb
@@ -17,16 +17,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Trick to be able to load source module from the notebook\n",
+    "nb_dir = os.path.split(os.getcwd())[0]\n",
+    "if nb_dir not in sys.path:\n",
+    "    sys.path.append(nb_dir)\n",
     "\n",
     "\n",
     "%matplotlib inline\n",
@@ -62,14 +69,17 @@
     "    \"\"\"Plot the repartition of tokens in the dataset.\"\"\"\n",
     "\n",
     "    tokens = df['token']\n",
+    "    stokens = sorted(tokens.unique())\n",
     "    tokens_counts = pd.DataFrame.from_dict({\n",
-    "            x: len(df[df['token'] == x]) for x in tokens.unique()\n",
+    "            x: len(df[df['token'] == x]) for x in stokens\n",
     "        },\n",
     "        orient='index'\n",
     "    )\n",
     "\n",
     "#     tokens_counts[1] = [100 * (x / sum(tokens_counts[0])) for x in tokens_counts[0]]\n",
-    "    return tokens_counts.plot.barh(**kwargs)\n",
+    "    ax = tokens_counts.plot.barh(**kwargs)\n",
+    "    ax.set(xlabel=\"token_nb\", ylabel=\"token_type\")\n",
+    "    return ax\n",
     "\n",
     "def token_pieplot(df, **kwargs):\n",
     "    \"\"\"Plot the repartition of tokens in the dataset.\"\"\"\n",
@@ -104,39 +114,13 @@
    },
    "outputs": [],
    "source": [
-    "# Dropping errors from the dataset\n",
-    "# TODO: Fix them instead, some file are lost in the process\n",
-    "n = len(df)\n",
-    "print('Preparing to clean data, dataset length :', n)\n",
+    "# Helper to clear raw dataset\n",
     "\n",
-    "df = df[df['token'] != 'Error']\n",
-    "print('Number of errors tokens dropped      :', n - len(df))\n",
+    "from srcs.preprocess.clean_dataset import clean_dataset\n",
     "\n",
-    "# Dropping comments, unneeded in the learning process\n",
-    "n = len(df)\n",
-    "df = df[df['token'] != 'Comment']\n",
-    "print('Number of comment tokents dropped    :', n - len(df))\n",
+    "df, stats = clean_dataset(df)\n",
     "\n",
-    "import re\n",
-    "\n",
-    "# Dropping empty strings of text tokens as they are irrelevent for the learning process\n",
-    "# since the input is already splitted by the lexer.\n",
-    "\n",
-    "n = len(df)\n",
-    "empty_string_regex = re.compile('^\\s*$')\n",
-    "not_empty_idxs = list(\n",
-    "    map(\n",
-    "        lambda x: empty_string_regex.match(x) is None,\n",
-    "        df['raw']\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "df = df[not_empty_idxs]\n",
-    "print('Number of empty text tokens dropped  :', n - len(df))\n",
-    "\n",
-    "\n",
-    "n = len(df)\n",
-    "print('Data cleaned, dataset length :', n)\n"
+    "print(stats)"
    ]
   },
   {
